# cgal

./: CMakeLists.txt
CGAL_Core/src/CGAL_Core/: CMakeLists.txt
Documentation/conversion_tools/: split_doxyassist.py
Documentation/doc/: CMakeLists.txt
Documentation/doc/Documentation/: Doxyfile.in
Documentation/doc/scripts/: pkglist_filter  pkglist_filter.bat  pkglist_filter.py
Installation/: CMakeLists.txt
Installation/cmake/modules/: CGAL_CheckCXXFileRuns.cmake  CGAL_Macros.cmake  CGAL_SCM.cmake  CGAL_SetupBoost.cmake  CGAL_UseMPFI.cmake  CGAL_add_test.cmake  FindCGAL_CORE.cmake
Installation/src/: CMakeLists.txt
Installation/src/CGAL/: CMakeLists.txt
Installation/test/Installation/: CMakeLists.txt
Intersections_2/include/CGAL/Intersections_2/: Triangle_2_Triangle_2_intersection_impl.h
Linear_cell_complex/benchmark/Linear_cell_complex_2/surface_mesh/: CMakeLists.txt
Linear_cell_complex/benchmark/Linear_cell_complex_3/cmake/: ACGCommon.cmake
Polygon/include/CGAL/Polygon_2/: Polygon_2_simplicity.h
Scripts/developer_scripts/: cgal_create_package_dir.py
